--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -91,8 +91,8 @@
     "    api = wandb.Api()\n",
     "\n",
     "# manual settings\n",
-    "config[\"max_epochs\"]   = 2 # 30\n",
-    "config[\"num_bin_data\"] = 1 # 500\n",
+    "config[\"max_epochs\"]   = 1 # 30\n",
+    "config[\"num_bin_data\"] = 10 # 500\n",
     "quantum_config         = json_config[\"pennylane_config\"]"
    ]
   },
@@ -240,7 +240,10 @@
     "        logger_config[\"name\"] = f\"{logger_config['group_rnd']} | {config['time']}_{config['device']}{suffix}_{config['rnd_seed']}\"\n",
     "    logger_config[\"id\"]       = logger_config[\"name\"]\n",
     "    logger_config[\"save_dir\"] = json_config[\"result_dir\"]\n",
-    "    logger = module_training.wandb_monitor(model, logger_config, config, model_config, data_config) if use_wandb else None\n",
+    "    if use_wandb:\n",
+    "        logger = module_training.wandb_monitor(model, logger_config, config, model_config, data_config)\n",
+    "    else:\n",
+    "        logger = module_training.default_monitor(logger_config, config, model_config, data_config)\n",
     "\n",
     "    # training information\n",
     "    print(\"\\n-------------------- Training information --------------------\")\n",
@@ -408,13 +411,13 @@
     "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":None},\n",
     "]\n",
     "\n",
-    "c_df, b_df, q_df = pd.DataFrame(), pd.DataFrame(), pd.DataFrame()\n",
-    "num_ptcs_range = range(2, 16+1, 2)\n",
-    "for rnd_seed, num_pt_ptcs in product(range(10), num_ptcs_range):\n",
-    "    for data_config in data_configs:\n",
-    "        data_config[\"num_pt_ptcs\"] = num_pt_ptcs\n",
-    "        config[\"rnd_seed\"] = rnd_seed\n",
-    "        L.seed_everything(config[\"rnd_seed\"])\n",
+    "# c_df, b_df, q_df = pd.DataFrame(), pd.DataFrame(), pd.DataFrame()\n",
+    "# num_ptcs_range = range(2, 16+1, 2)\n",
+    "# for rnd_seed, num_pt_ptcs in product(range(10), num_ptcs_range):\n",
+    "#     for data_config in data_configs:\n",
+    "#         data_config[\"num_pt_ptcs\"] = num_pt_ptcs\n",
+    "#         config[\"rnd_seed\"] = rnd_seed\n",
+    "#         L.seed_everything(config[\"rnd_seed\"])\n",
     "\n",
     "        # # classical\n",
     "        # for g_dim in [3,6,9]:\n",
