20231217 Add README.md (1st version)

--- a/demo_mg5.ipynb
+++ b/demo_mg5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo for reading MG5 file"
+    "# Demo for MadGraph5 dataset"
    ]
   },
   {
@@ -44,9 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Particles/Anti-Particles distribution of events\n",
-    "\n",
-    "Plot the constituent in pie chart for each channel."
+    "### Pie chart of particles/anti-particles distribution of events"
    ]
   },
   {
@@ -83,9 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pt, eta, phi distribution of jets or fatjets\n",
-    "\n",
-    "Plot `Pt`, `eta`, `phi` of individual fatjet"
+    "### Historgram of Pt, eta, phi distribution of jets (not individual particles)"
    ]
   },
   {
