--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -48,9 +48,6 @@
     "    # read JSON config file\n",
     "    json_config = json.load(json_file)\n",
     "\n",
-    "    # set random seed for reproducibility\n",
-    "    L.seed_everything(json_config[\"rnd_seed\"])\n",
-    "\n",
     "    # directory to store result\n",
     "    os.makedirs(json_config[\"result_dir\"], exist_ok=True)\n",
     "\n",
@@ -90,10 +87,13 @@
     "    import wandb\n",
     "    api = wandb.Api()\n",
     "\n",
+    "# quantum config\n",
+    "quantum_config = json_config[config[\"quantum_config\"]]\n",
+    "\n",
     "# manual settings\n",
-    "config[\"max_epochs\"]   = 1 # 30\n",
-    "config[\"num_bin_data\"] = 10 # 500\n",
-    "quantum_config         = json_config[\"pennylane_config\"]"
+    "if config[\"quick_test\"] == True:\n",
+    "    config[\"max_epochs\"]   = 1\n",
+    "    config[\"num_bin_data\"] = 1"
    ]
   },
   {
