20231218 Fix ckpt path bug

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -93,7 +93,7 @@
     "# manual settings\n",
     "if config[\"quick_test\"] == True:\n",
     "    config[\"max_epochs\"]   = 1\n",
-    "    config[\"num_bin_data\"] = 1"
+    "    config[\"num_bin_data\"] = 10"
    ]
   },
   {
@@ -228,16 +228,18 @@
     "    if suffix != \"\":\n",
     "        suffix = \"_\" + suffix\n",
     "\n",
+    "    # additional model information\n",
+    "    model_config[\"model_name\"] = model.__class__.__name__\n",
+    "    model_config[\"group_rnd\"]  = f\"{model.__class__.__name__}_{model_config['model_suffix']} | {data_config['data_suffix']}\"\n",
+    "\n",
     "    # use wandb monitoring if needed\n",
     "    logger_config = {}\n",
     "    logger_config[\"project\"]    = json_config[\"project\"]\n",
     "    logger_config[\"group\"]      = f\"{data_config['sig']}_{data_config['bkg']}\"\n",
-    "    logger_config[\"model_name\"] = model.__class__.__name__\n",
-    "    logger_config[\"group_rnd\"]  = f\"{model.__class__.__name__}_{model_config['model_suffix']} | {data_config['data_suffix']}\"\n",
     "    if \"qiskit\" in quantum_config[\"qdevice\"]:\n",
-    "        logger_config[\"name\"] = f\"{logger_config['group_rnd']} | {config['time']}_{quantum_config['qdevice']}{suffix}_{config['rnd_seed']}\"\n",
+    "        logger_config[\"name\"] = f\"{model_config['group_rnd']} | {config['time']}_{quantum_config['qdevice']}{suffix}_{config['rnd_seed']}\"\n",
     "    else:\n",
-    "        logger_config[\"name\"] = f\"{logger_config['group_rnd']} | {config['time']}_{config['device']}{suffix}_{config['rnd_seed']}\"\n",
+    "        logger_config[\"name\"] = f\"{model_config['group_rnd']} | {config['time']}_{config['device']}{suffix}_{config['rnd_seed']}\"\n",
     "    logger_config[\"id\"]       = logger_config[\"name\"]\n",
     "    logger_config[\"save_dir\"] = json_config[\"result_dir\"]\n",
     "    if use_wandb:\n",
@@ -270,9 +272,9 @@
     "        test_summary  = trainer.test(litmodel, dataloaders=data_module.test_dataloader())[0]\n",
     "    elif mode == \"predict\":\n",
     "        ckpt_dir = json_config[\"ckpt_dir\"]\n",
-    "        ckpt_key = f\"{logger_config['model_name']}_{model_config['model_suffix']}\"\n",
+    "        ckpt_key = f\"{model_config['model_name']}_{model_config['model_suffix']} | {data_config['abbrev']}_cut{data_config['cut']}\"\n",
     "        for f in os.listdir(ckpt_dir):\n",
-    "            if logger_config['model_name'] == QuantumRotQCGNN.__name__:\n",
+    "            if model_config['model_name'] == QuantumRotQCGNN.__name__:\n",
     "                ckpt_key = ckpt_key.replace(f\"qidx{model_config['gnn_idx_qubits']}\", \"qidx3\")\n",
     "            if ckpt_key in f and int(f[-1]) == config[\"rnd_seed\"]:\n",
     "                ckpt_path = os.path.join(ckpt_dir, f, \"checkpoints\")\n",
@@ -332,7 +334,7 @@
     "    if mode == \"train\":\n",
     "        while (summary[\"test_acc_epoch\"] < json_config[\"retrain_threshold\"]).any() and json_config[\"retrain\"]:\n",
     "            if use_wandb:\n",
-    "                run = api.run(f\"{json_config['wandb_id']}/{json_config['project']}/{run_id}\") if use_wandb else None\n",
+    "                run = api.run(f\"{json_config['wandb_id']}/{json_config['project']}/{run_id}\")\n",
     "                run.delete()\n",
     "            config[\"rnd_seed\"] += json_config[\"retrain_cycle\"]\n",
     "            L.seed_everything(config[\"rnd_seed\"])\n",
@@ -369,28 +371,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_config = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
-    "# data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
+    "data_configs = [\n",
+    "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "]\n",
     "\n",
-    "# training\n",
-    "for rnd_seed in range(1):\n",
-    "    config[\"rnd_seed\"] = rnd_seed\n",
-    "    L.seed_everything(config[\"rnd_seed\"])\n",
+    "# # training\n",
+    "# for data_config, rnd_seed in product(data_configs, range(10)):\n",
+    "#     config[\"rnd_seed\"] = rnd_seed\n",
+    "#     L.seed_everything(config[\"rnd_seed\"])\n",
     "    \n",
     "    # # classical\n",
     "    # for g_dim in [3,6,9]:\n",
     "    #     execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"train\")\n",
     "\n",
-    "    # # best classical\n",
+    "    # best classical\n",
     "    # execute_classical(data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"train\")\n",
     "\n",
-    "    # # quantum\n",
+    "    # quantum\n",
     "    # for q in [3,6,9]:\n",
-    "    #     if q == 3:\n",
-    "    #         lr = 1E-2\n",
-    "    #     else:\n",
-    "    #         lr = 1E-3\n",
-    "    #     execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=lr, mode=\"train\")"
+    "        # execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")"
    ]
   },
   {
@@ -421,19 +421,19 @@
     "\n",
     "        # # classical\n",
     "        # for g_dim in [3,6,9]:\n",
-    "        #     _, summary = execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, l=1E-3, mode=\"predict\")\n",
+    "        #     _, summary = execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"predict\")\n",
     "        #     c_df = pd.concat((c_df, summary))\n",
     "        #     c_df.to_csv(f\"csv/classical-{config['num_bin_data']}_{rnd_seed}.csv\", index=False)\n",
     "\n",
     "        # # best classical\n",
-    "        # _, summary = execute_classical(data_config, go=1024, gh=1024, gl=4, l=1E-3, mode=\"predict\")\n",
+    "        # _, summary = execute_classical(data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"predict\")\n",
     "        # b_df = pd.concat((b_df, summary))\n",
     "        # b_df.to_csv(f\"csv/classical-{config['num_bin_data']}_best.csv\", index=False)\n",
     "\n",
     "        # # quantum\n",
     "        # for q in [3,6,9]:\n",
     "        #     _, summary = execute_quantum(data_config, qnn=q, gl=1, gr=q, mode=\"predict\")\n",
-    "        #     q_df = pd.concat((c_df, summary))\n",
+    "        #     q_df = pd.concat((q_df, summary))\n",
     "        #     q_df.to_csv(f\"csv/qnn{q}_gl1_gr{q}_ptc({num_ptcs_range[0]},{num_ptcs_range[-1]})-{config['num_bin_data']}_{rnd_seed}.csv\", index=False)\n"
    ]
   }
