--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -16,8 +16,8 @@
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20231206\"\n",
-    "suffix  = \"\"\n",
+    "date    = \"\"\n",
+    "suffix  = \"go1024_gh1024_gl4\"\n",
     "project = \"g_main\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
