20231222 Fix Pennylane version inputs dimension bug

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -160,12 +160,22 @@
     "                ctrl_H = qml.ctrl(qml.Hadamard, control=range(num_ir_qubits), control_values=control_values)\n",
     "                ctrl_H(wires=num_ir_qubits+i)\n",
     "                ctrl_R = qml.ctrl(qml.Rot, control=range(num_ir_qubits), control_values=control_values)\n",
-    "                ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=num_ir_qubits+i)\n",
+    "                # batch data\n",
+    "                if len(_input.shape) > 1:\n",
+    "                    ctrl_R(theta=_input[:,0], phi=_input[:,1], omega=_input[:,2], wires=num_ir_qubits+i)\n",
+    "                # single data\n",
+    "                else:\n",
+    "                    ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=num_ir_qubits+i)\n",
     "        \n",
     "        # rotation encoding on qiskit\n",
     "        num_wk_qubits = num_ir_qubits - 1\n",
     "        def qiskit_encoding(_input, control_values):\n",
-    "            theta, phi, omega = _input[0], _input[1], _input[2]\n",
+    "            # batch data\n",
+    "            if len(_input.shape) > 1:\n",
+    "                theta, phi, omega = _input[:,0], _input[:,1], _input[:,2]\n",
+    "            # single data\n",
+    "            else:\n",
+    "                theta, phi, omega = _input[0], _input[1], _input[2]\n",
     "            # see N.C. page.184\n",
     "            for i in range(num_nr_qubits):\n",
     "                # control values\n",
@@ -381,16 +391,16 @@
     "#     config[\"rnd_seed\"] = rnd_seed\n",
     "#     L.seed_everything(config[\"rnd_seed\"])\n",
     "    \n",
-    "    # # classical\n",
-    "    # for g_dim in [3,6,9]:\n",
-    "    #     execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"train\")\n",
+    "#     # classical\n",
+    "#     for g_dim in [3,6,9]:\n",
+    "#         execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"train\")\n",
     "\n",
-    "    # best classical\n",
-    "    # execute_classical(data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"train\")\n",
+    "#     # best classical\n",
+    "#     execute_classical(data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"train\")\n",
     "\n",
-    "    # quantum\n",
-    "    # for q in [3,6,9]:\n",
-    "        # execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")"
+    "#     # quantum\n",
+    "#     for q in [3,6,9]:\n",
+    "#         execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")"
    ]
   },
   {
