--- a/demo_enc.ipynb
+++ b/demo_enc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,21 @@
     "            ctrl_H = qml.ctrl(qml.Hadamard, control=range(num_ir_qubits), control_values=control_values)\n",
     "            ctrl_H(wires=num_ir_qubits+i)\n",
     "            ctrl_R = qml.ctrl(qml.Rot, control=range(num_ir_qubits), control_values=control_values)\n",
-    "            ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=num_ir_qubits+i)\n",
+    "            # batch data\n",
+    "            if len(_input.shape) > 1:\n",
+    "                ctrl_R(theta=_input[:,0], phi=_input[:,1], omega=_input[:,2], wires=num_ir_qubits+i)\n",
+    "            # single data\n",
+    "            else:\n",
+    "                ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=num_ir_qubits+i)\n",
     "\n",
     "    # rotation encoding on qiskit\n",
     "    num_wk_qubits = num_ir_qubits - 1\n",
     "    def qiskit_encoding(_input, control_values):\n",
-    "        theta, phi, omega = _input[0], _input[1], _input[2]\n",
+    "        if len(_input.shape) > 1:\n",
+    "            theta, phi, omega = _input[:,0], _input[:,1], _input[:,2]\n",
+    "        # single data\n",
+    "        else:\n",
+    "            theta, phi, omega = _input[0], _input[1], _input[2]\n",
     "        # see N.C. page.184\n",
     "        for i in range(num_nr_qubits):\n",
     "            # control values\n",
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +106,12 @@
      "text": [
       "Global seed set to 0\n",
       "Global seed set to 0\n",
+      "/home/yianchen/.pyenv/versions/3.9.12/lib/python3.9/site-packages/pennylane/math/utils.py:227: UserWarning: Contains tensors of types {'autograd', 'torch'}; dispatch will prioritize TensorFlow, PyTorch, and  Jax over Autograd. Consider replacing Autograd with vanilla NumPy.\n",
+      "  warnings.warn(\n",
       "Global seed set to 1\n",
-      "Global seed set to 1\n"
+      "Global seed set to 1\n",
+      "Global seed set to 2\n",
+      "Global seed set to 2\n"
      ]
     },
     {
@@ -108,12 +121,26 @@
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
-      " - tensor([ 8.6146, -8.7186,  5.7605, -5.1836,  6.5973, -5.9904,  4.3638, -4.1662,\n",
-      "         4.3642, -4.3749], grad_fn=<ReshapeAliasBackward0>)\n",
+      " - tensor([ 3.1391, -4.1633,  5.3773, -5.8651,  3.5260, -1.9418,  2.9362,  3.2477,\n",
+      "         4.6836, -1.9314,  4.1385, -4.1309,  3.5726, -5.6751,  1.4566, -0.3557],\n",
+      "       grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
-      " - tensor([ 8.6146, -8.7186,  5.7605, -5.1836,  6.5973, -5.9904,  4.3638, -4.1662,\n",
-      "         4.3642, -4.3749], grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000011680\n",
+      " - tensor([ 3.1391, -4.1633,  5.3773, -5.8651,  3.5260, -1.9418,  2.9362,  3.2477,\n",
+      "         4.6836, -1.9314,  4.1385, -4.1309,  3.5726, -5.6751,  1.4566, -0.3557],\n",
+      "       grad_fn=<ReshapeAliasBackward0>)\n",
+      "Difference norm = 0.0000037570\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
+      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "Pennylane:\n",
+      " - tensor([-2.3010,  4.5080, -0.7773,  3.8009, -1.6603,  2.2806, -0.2871,  1.9528,\n",
+      "        -0.3428,  0.9435], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Qiskit:\n",
+      " - tensor([-2.3010,  4.5080, -0.7773,  3.8009, -1.6603,  2.2806, -0.2871,  1.9528,\n",
+      "        -0.3428,  0.9435], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Difference norm = 0.0000029690\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -125,12 +152,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Global seed set to 2\n",
-      "Global seed set to 2\n",
       "Global seed set to 3\n",
       "Global seed set to 3\n",
       "Global seed set to 4\n",
-      "Global seed set to 4\n"
+      "Global seed set to 4\n",
+      "Global seed set to 5\n",
+      "Global seed set to 5\n"
      ]
     },
     {
@@ -138,36 +165,36 @@
      "output_type": "stream",
      "text": [
       "Pennylane:\n",
-      " - tensor([ 20.5682, -20.7537,  23.8379, -23.8621,  31.6828, -31.7217,  25.8966,\n",
-      "        -26.0866,  27.8525, -28.1735,  28.6361, -28.8018],\n",
-      "       grad_fn=<ReshapeAliasBackward0>)\n",
+      " - tensor([-3.1551, -3.2923, -3.3829, -3.3523, -3.4551, -2.8127, -1.2576, -1.3178,\n",
+      "         1.3526, -0.5999, -3.2019, -3.1243], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
-      " - tensor([ 20.5682, -20.7537,  23.8379, -23.8621,  31.6828, -31.7217,  25.8966,\n",
-      "        -26.0866,  27.8525, -28.1735,  28.6361, -28.8018],\n",
-      "       grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000071366\n",
+      " - tensor([-3.1551, -3.2923, -3.3829, -3.3523, -3.4551, -2.8127, -1.2576, -1.3178,\n",
+      "         1.3526, -0.5999, -3.2019, -3.1243], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Difference norm = 0.0000017357\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
-      " - tensor([-15.7156,  -7.3684], grad_fn=<ReshapeAliasBackward0>)\n",
+      " - tensor([4.9203, 6.1964], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
-      " - tensor([-15.7156,  -7.3684], grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000000000\n",
+      " - tensor([4.9203, 6.1964], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Difference norm = 0.0000021325\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
-      " - tensor([-30.9026,  11.5583, -33.7914,  12.5250, -34.0764,  17.6735],\n",
+      " - tensor([-2.9831,  7.3845, -1.9658,  6.7513, -2.0885,  5.8952, -2.6368,  4.0677,\n",
+      "        -0.8205,  7.2788, -3.1736,  5.1305,  0.5032,  4.9465],\n",
       "       grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
-      " - tensor([-30.9026,  11.5583, -33.7914,  12.5250, -34.0764,  17.6735],\n",
+      " - tensor([-2.9831,  7.3845, -1.9658,  6.7513, -2.0885,  5.8952, -2.6368,  4.0677,\n",
+      "        -0.8205,  7.2787, -3.1736,  5.1305,  0.5032,  4.9465],\n",
       "       grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000009537\n",
+      "Difference norm = 0.0000047400\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -179,75 +206,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Global seed set to 5\n",
-      "Global seed set to 5\n",
       "Global seed set to 6\n",
-      "Global seed set to 6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pennylane:\n",
-      " - tensor([-41.5523,  18.4090, -45.9006,  23.4644, -39.4279,  13.9275],\n",
-      "       grad_fn=<ReshapeAliasBackward0>)\n",
-      "Qiskit:\n",
-      " - tensor([-41.5523,  18.4090, -45.9006,  23.4644, -39.4279,  13.9275],\n",
-      "       grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000038147\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
-      "Pennylane:\n",
-      " - tensor([-41.5441,  -6.3623, -49.1275,  -6.6868, -41.9647,  -7.5990, -42.8934,\n",
-      "         -6.0298], grad_fn=<ReshapeAliasBackward0>)\n",
-      "Qiskit:\n",
-      " - tensor([-41.5441,  -6.3623, -49.1275,  -6.6868, -41.9647,  -7.5990, -42.8934,\n",
-      "         -6.0298], grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000018468\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Global seed set to 6\n",
       "Global seed set to 7\n",
-      "Global seed set to 7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pennylane:\n",
-      " - tensor([-2.7514,  1.0339, -3.1319,  0.5160, -6.0548, -2.8743],\n",
-      "       grad_fn=<ReshapeAliasBackward0>)\n",
-      "Qiskit:\n",
-      " - tensor([-2.7514,  1.0339, -3.1319,  0.5160, -6.0548, -2.8743],\n",
-      "       grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000006848\n",
-      "\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
-      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Global seed set to 7\n",
       "Global seed set to 8\n",
       "Global seed set to 8\n",
-      "Global seed set to 9\n",
       "Global seed set to 9\n"
      ]
     },
@@ -256,40 +220,75 @@
      "output_type": "stream",
      "text": [
       "Pennylane:\n",
-      " - tensor([-12.8231,   0.9222, -17.1042,   1.0457, -16.3320,   4.0627, -17.8126,\n",
-      "          2.9222, -16.4908,   3.7717, -16.4782,   4.3244, -16.4099,   4.5318,\n",
-      "        -13.7260,   2.2017], grad_fn=<ReshapeAliasBackward0>)\n",
+      " - tensor([ 0.0265, -4.1727, -5.8096, -6.9368, -0.7185, -4.9153, -5.9226, -5.5573,\n",
+      "        -7.1664, -7.9282, -5.9516, -6.4883, -2.1585, -4.3335, -6.1888, -6.3018],\n",
+      "       grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
-      " - tensor([-12.8231,   0.9222, -17.1042,   1.0457, -16.3320,   4.0627, -17.8126,\n",
-      "          2.9222, -16.4908,   3.7717, -16.4782,   4.3244, -16.4099,   4.5318,\n",
-      "        -13.7260,   2.2017], grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000016082\n",
+      " - tensor([ 0.0265, -4.1727, -5.8096, -6.9368, -0.7185, -4.9153, -5.9225, -5.5573,\n",
+      "        -7.1664, -7.9282, -5.9516, -6.4883, -2.1585, -4.3335, -6.1888, -6.3018],\n",
+      "       grad_fn=<ReshapeAliasBackward0>)\n",
+      "Difference norm = 0.0000051210\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
-      " - tensor([13.9520, 10.9789, 12.5315, 10.4392, 14.4646, 10.2833, 13.6068,  6.8219],\n",
-      "       grad_fn=<ReshapeAliasBackward0>)\n",
+      " - tensor([-0.4749, -1.7244,  4.0903, -6.3153], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
-      " - tensor([13.9520, 10.9789, 12.5315, 10.4392, 14.4646, 10.2833, 13.6068,  6.8219],\n",
-      "       grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000026974\n",
+      " - tensor([-0.4749, -1.7244,  4.0903, -6.3153], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Difference norm = 0.0000007913\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
-      " - tensor([-33.1536,  26.4964, -25.3775,  22.8805, -33.8722,  25.2127, -34.8949,\n",
-      "         25.3872, -31.9725,  24.0071, -30.3235,  25.7458, -33.1799,  25.1792],\n",
+      " - tensor([-0.3037,  4.6679, -3.3233, -1.5396, -2.3064,  5.6884, -5.5212, -1.3611,\n",
+      "        -4.7468,  0.6050], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Qiskit:\n",
+      " - tensor([-0.3037,  4.6679, -3.3233, -1.5396, -2.3064,  5.6884, -5.5212, -1.3611,\n",
+      "        -4.7468,  0.6050], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Difference norm = 0.0000022940\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
+      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "Pennylane:\n",
+      " - tensor([-1.0253,  0.9576, -2.6437,  3.3654, -0.7822,  0.8869, -0.5151, -2.1516,\n",
+      "        -0.5383, -2.7612, -0.4459, -2.1606], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Qiskit:\n",
+      " - tensor([-1.0253,  0.9576, -2.6437,  3.3654, -0.7822,  0.8869, -0.5151, -2.1516,\n",
+      "        -0.5383, -2.7612, -0.4459, -2.1606], grad_fn=<ReshapeAliasBackward0>)\n",
+      "Difference norm = 0.0000011531\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 0, 2)\n",
+      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "Pennylane:\n",
+      " - tensor([ 2.5975, -3.4874, -0.1645,  0.6105,  2.3918, -2.7727,  1.5809, -2.4491,\n",
+      "         1.5957, -3.8615,  5.0309, -5.0276,  2.9914, -3.0150],\n",
       "       grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
-      " - tensor([-33.1536,  26.4964, -25.3775,  22.8805, -33.8722,  25.2127, -34.8949,\n",
-      "         25.3872, -31.9725,  24.0071, -30.3235,  25.7458, -33.1799,  25.1792],\n",
+      " - tensor([ 2.5975, -3.4874, -0.1645,  0.6105,  2.3918, -2.7727,  1.5809, -2.4491,\n",
+      "         1.5957, -3.8615,  5.0309, -5.0276,  2.9914, -3.0150],\n",
       "       grad_fn=<ReshapeAliasBackward0>)\n",
-      "Difference norm = 0.0000038147\n",
+      "Difference norm = 0.0000022650\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n"
@@ -307,8 +306,9 @@
     "    L.seed_everything(i) # to make the random initialized weights reproducible\n",
     "    qiskit_circuit    = module_model.QCGNN(IR, NR, 1, 1, ctrl_enc=encoding(IR, NR, \"qiskit\"))\n",
     "\n",
-    "    N = np.random.randint(2**IR) + 1\n",
-    "    x = torch.rand(N, 3)\n",
+    "    batch_size = 1\n",
+    "    num_ptcs = np.random.randint(2**IR) + 1\n",
+    "    x = torch.rand(batch_size, num_ptcs, 3)\n",
     "\n",
     "    y_pennylane = pennylane_circuit(x).reshape(-1)\n",
     "    y_qiskit    = qiskit_circuit(x).reshape(-1)\n",
