20231222 Add qiskit device prediction

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -50,6 +50,8 @@
     "\n",
     "    # directory to store result\n",
     "    os.makedirs(json_config[\"result_dir\"], exist_ok=True)\n",
+    "    os.makedirs(\"./ckpt\", exist_ok=True)\n",
+    "    os.makedirs(\"./csv\", exist_ok=True)\n",
     "\n",
     "    # default configurations\n",
     "    config = json_config[\"config\"]"
@@ -89,6 +91,7 @@
     "\n",
     "# quantum config\n",
     "quantum_config = json_config[config[\"quantum_config\"]]\n",
+    "quantum_config[\"backend\"] = input(\"Qiskit real device backend: \")\n",
     "\n",
     "# manual settings\n",
     "if config[\"quick_test\"] == True:\n",
@@ -442,9 +445,40 @@
     "\n",
     "        # # quantum\n",
     "        # for q in [3,6,9]:\n",
-    "        #     _, summary = execute_quantum(data_config, qnn=q, gl=1, gr=q, mode=\"predict\")\n",
+    "        #     _, summary = execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"predict\")\n",
     "        #     q_df = pd.concat((q_df, summary))\n",
     "        #     q_df.to_csv(f\"csv/qnn{q}_gl1_gr{q}_ptc({num_ptcs_range[0]},{num_ptcs_range[-1]})-{config['num_bin_data']}_{rnd_seed}.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Qiskit device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_configs = [\n",
+    "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "]\n",
+    "\n",
+    "q_df = pd.DataFrame()\n",
+    "for rnd_seed in range(3):\n",
+    "    for data_config in data_configs:\n",
+    "        config[\"rnd_seed\"] = rnd_seed\n",
+    "        L.seed_everything(config[\"rnd_seed\"])\n",
+    "\n",
+    "        # quantum\n",
+    "        q = 3\n",
+    "        _, summary = execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"predict\")\n",
+    "        q_df = pd.concat((q_df, summary))\n",
+    "        q_df.to_csv(f\"csv/{quantum_config['backend']}_{q}_gl1_gr{q}_ptc{config['num_bin_data']}-{config['num_pt_ptcs']}_{rnd_seed}.csv\", index=False)"
    ]
   }
  ],
