--- a/result_diff_ptcs.ipynb
+++ b/result_diff_ptcs.ipynb
@@ -282,7 +282,7 @@
    "source": [
     "qnn, gl, gr    = 3, 1, 3\n",
     "num_ptcs_range = range(2, 16+1)\n",
-    "c_dataframe    = pd.concat((pd.read_csv(f\"csv/classical_9.csv\"), pd.read_csv(f\"csv/classical-500_best.csv\")))\n",
+    "c_dataframe    = pd.concat((pd.read_csv(f\"csv/classical-50_9.csv\"), pd.read_csv(f\"csv/classical-500_best.csv\")))\n",
     "q_dataframe    = pd.read_csv(f\"csv/qnn{qnn}_gl{gl}_gr{gr}_ptc({num_ptcs_range[0]},{num_ptcs_range[-1]})-16.csv\")\n",
     "df = pd.concat((c_dataframe, q_dataframe))\n",
     "df = df.fillna(0)\n",
@@ -290,7 +290,7 @@
     "    \"model_name\", \"abbrev\", \"data_mode\", \"num_pt_ptcs\", \"test_acc_epoch\",\n",
     "    \"rnd_seed\", \"gnn_out\", \"gnn_hidden\", \"gnn_layers\", \"gnn_nn_qubits\", \"gnn_reupload\"\n",
     "    ]]\n",
-    "df.loc[df[\"model_name\"] == \"Classical2PCGNN\", \"M\"] = \"C\"\n",
+    "df.loc[df[\"model_name\"] == \"ClassicalMPGNN\", \"M\"] = \"C\"\n",
     "df.loc[df[\"model_name\"] == \"QuantumRotQCGNN\", \"M\"] = \"Q\"\n",
     "df.loc[df[\"gnn_out\"].astype(int) == 1024, \"M\"] = \"B\"\n",
     "df[\"hue\"] = df[\"M\"] + \"_\" + df[\"data_mode\"]\n",
