20231223 Add g_ibmq.ipynb

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -39,25 +39,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"config.json\", \"r\") as json_file:\n",
-    "    # read JSON config file\n",
-    "    json_config = json.load(json_file)\n",
-    "\n",
-    "    # directory to store result\n",
-    "    os.makedirs(json_config[\"result_dir\"], exist_ok=True)\n",
-    "    os.makedirs(\"./ckpt\", exist_ok=True)\n",
-    "    os.makedirs(\"./csv\", exist_ok=True)\n",
-    "\n",
-    "    # default configurations\n",
-    "    config = json_config[\"config\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,33 +51,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# general configuration and setup\n",
-    "config = json_config[\"config\"]\n",
-    "config[\"ctime\"]  = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
-    "config[\"time\"]   = input(\"Specify a datetime or leave empty (default current time): \") or config[\"ctime\"]\n",
-    "config[\"device\"] = input(\"Enter the computing device (4090, slurm, node, etc.)    : \")\n",
-    "config[\"suffix\"] = input(\"Suffix (the format looks like 'MODEL_SUFFIX_DATE')      : \")\n",
-    "if config[\"device\"] == \"slurm\":\n",
-    "    # pass arguments when running through slurm\n",
-    "    parser = argparse.ArgumentParser(description='argparse for slurm')\n",
-    "    parser.add_argument('--rnd_seed', type=int, help='random seed')\n",
-    "    parse_args = parser.parse_args()\n",
-    "    config[\"rnd_seed\"] = parse_args.rnd_seed\n",
+    "with open(\"config.json\", \"r\") as json_file:\n",
+    "    # read JSON config file\n",
+    "    json_config = json.load(json_file)\n",
     "\n",
-    "# whether using wandb to monitor the training procedure\n",
-    "use_wandb = json_config[\"use_wandb\"]\n",
-    "if use_wandb:\n",
-    "    import wandb\n",
-    "    api = wandb.Api()\n",
+    "    # directory to store result\n",
+    "    os.makedirs(json_config[\"result_dir\"], exist_ok=True)\n",
+    "    os.makedirs(json_config[\"ckpt_dir\"], exist_ok=True)\n",
     "\n",
-    "# quantum config\n",
-    "quantum_config = json_config[config[\"quantum_config\"]]\n",
-    "quantum_config[\"backend\"] = input(\"Qiskit real device backend: \")\n",
+    "    # default configurations\n",
+    "    config = json_config[\"config\"]\n",
     "\n",
-    "# manual settings\n",
-    "if config[\"quick_test\"] == True:\n",
-    "    config[\"max_epochs\"]   = 1\n",
-    "    config[\"num_bin_data\"] = 10"
+    "if __name__ == \"__main__\":\n",
+    "    # general configuration and setup\n",
+    "    config[\"ctime\"]  = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
+    "    config[\"time\"]   = input(\"Specify a datetime or leave empty (default current time): \") or config[\"ctime\"]\n",
+    "    config[\"device\"] = input(\"Enter the computing device (4090, slurm, node, etc.)    : \")\n",
+    "    config[\"suffix\"] = input(\"Suffix (the format looks like 'MODEL_SUFFIX_DATE')      : \")\n",
+    "    if config[\"device\"] == \"slurm\":\n",
+    "        # pass arguments when running through slurm\n",
+    "        parser = argparse.ArgumentParser(description='argparse for slurm')\n",
+    "        parser.add_argument('--rnd_seed', type=int, help='random seed')\n",
+    "        parse_args = parser.parse_args()\n",
+    "        config[\"rnd_seed\"] = parse_args.rnd_seed\n",
+    "\n",
+    "    # whether using wandb to monitor the training procedure\n",
+    "    use_wandb = json_config[\"use_wandb\"]\n",
+    "    if use_wandb:\n",
+    "        import wandb\n",
+    "        api = wandb.Api()\n",
+    "\n",
+    "    # quantum config\n",
+    "    quantum_config = json_config[config[\"quantum_config\"]]\n",
+    "    quantum_config[\"qbackend\"] = input(\"Qiskit real device backend: \")\n",
+    "\n",
+    "    # manual settings\n",
+    "    if config[\"quick_test\"] == True:\n",
+    "        config[\"max_epochs\"]   = 1\n",
+    "        config[\"num_bin_data\"] = 10"
    ]
   },
   {
@@ -154,65 +146,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rotation encoding on pennylane simulator\n",
+    "def pennylane_encoding(_input, control_values, num_ir_qubits, num_nr_qubits):\n",
+    "    for i in range(num_nr_qubits):\n",
+    "        ctrl_H = qml.ctrl(qml.Hadamard, control=range(num_ir_qubits), control_values=control_values)\n",
+    "        ctrl_H(wires=num_ir_qubits+i)\n",
+    "        ctrl_R = qml.ctrl(qml.Rot, control=range(num_ir_qubits), control_values=control_values)\n",
+    "        # batch data\n",
+    "        if len(_input.shape) > 1:\n",
+    "            ctrl_R(theta=_input[:,0], phi=_input[:,1], omega=_input[:,2], wires=num_ir_qubits+i)\n",
+    "        # single data\n",
+    "        else:\n",
+    "            ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=num_ir_qubits+i)\n",
+    "\n",
+    "# rotation encoding on qiskit\n",
+    "def qiskit_encoding(_input, control_values, num_ir_qubits, num_nr_qubits):\n",
+    "    num_wk_qubits = num_ir_qubits - 1\n",
+    "    # batch data\n",
+    "    if len(_input.shape) > 1:\n",
+    "        theta, phi, omega = _input[:,0], _input[:,1], _input[:,2]\n",
+    "    # single data\n",
+    "    else:\n",
+    "        theta, phi, omega = _input[0], _input[1], _input[2]\n",
+    "    # see N.C. page.184\n",
+    "    for i in range(num_nr_qubits):\n",
+    "        # control values\n",
+    "        for q in range(num_ir_qubits):\n",
+    "            if control_values[q] == 0:\n",
+    "                qml.PauliX(wires=q)\n",
+    "        # toffoli transformation\n",
+    "        if num_ir_qubits >= 2:\n",
+    "            qml.Toffoli(wires=(0, 1, num_ir_qubits))\n",
+    "        for q in range(num_wk_qubits-1):\n",
+    "            qml.Toffoli(wires=(2+q, num_ir_qubits+q, num_ir_qubits+1+q))\n",
+    "        # ctrl_H: decomposed by H = i Rx(pi) Ry(pi/2) (if complete graph with power of 2 nodes -> relative phase i becomes global)\n",
+    "        target_qubit = num_ir_qubits + num_wk_qubits + i\n",
+    "        qml.CRY(np.pi/2, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "        qml.CRX(np.pi, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "        # ctrl_R: Rot(phi, theta, omega) = Rz(omega) Ry(theta) Rz(phi)\n",
+    "        qml.CRZ(phi, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "        qml.CRY(theta, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "        qml.CRZ(omega, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
+    "        # toffoli inverse transformation\n",
+    "        for q in reversed(range(num_wk_qubits-1)):\n",
+    "            qml.Toffoli(wires=(2+q, num_ir_qubits+q, num_ir_qubits+1+q))\n",
+    "        if num_ir_qubits >= 2:\n",
+    "            qml.Toffoli(wires=(0, 1, num_ir_qubits))\n",
+    "        # control values\n",
+    "        for q in range(num_ir_qubits):\n",
+    "            if control_values[q] == 0:\n",
+    "                qml.PauliX(wires=q)\n",
+    "\n",
     "class QuantumRotQCGNN(nn.Module):\n",
     "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, quantum_config):\n",
     "        super().__init__()\n",
-    "        # rotation encoding on pennylane simulator\n",
-    "        def pennylane_encoding(_input, control_values):\n",
-    "            for i in range(num_nr_qubits):\n",
-    "                ctrl_H = qml.ctrl(qml.Hadamard, control=range(num_ir_qubits), control_values=control_values)\n",
-    "                ctrl_H(wires=num_ir_qubits+i)\n",
-    "                ctrl_R = qml.ctrl(qml.Rot, control=range(num_ir_qubits), control_values=control_values)\n",
-    "                # batch data\n",
-    "                if len(_input.shape) > 1:\n",
-    "                    ctrl_R(theta=_input[:,0], phi=_input[:,1], omega=_input[:,2], wires=num_ir_qubits+i)\n",
-    "                # single data\n",
-    "                else:\n",
-    "                    ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=num_ir_qubits+i)\n",
-    "        \n",
-    "        # rotation encoding on qiskit\n",
-    "        num_wk_qubits = num_ir_qubits - 1\n",
-    "        def qiskit_encoding(_input, control_values):\n",
-    "            # batch data\n",
-    "            if len(_input.shape) > 1:\n",
-    "                theta, phi, omega = _input[:,0], _input[:,1], _input[:,2]\n",
-    "            # single data\n",
-    "            else:\n",
-    "                theta, phi, omega = _input[0], _input[1], _input[2]\n",
-    "            # see N.C. page.184\n",
-    "            for i in range(num_nr_qubits):\n",
-    "                # control values\n",
-    "                for q in range(num_ir_qubits):\n",
-    "                    if control_values[q] == 0:\n",
-    "                        qml.PauliX(wires=q)\n",
-    "                # toffoli transformation\n",
-    "                if num_ir_qubits >= 2:\n",
-    "                    qml.Toffoli(wires=(0, 1, num_ir_qubits))\n",
-    "                for q in range(num_wk_qubits-1):\n",
-    "                    qml.Toffoli(wires=(2+q, num_ir_qubits+q, num_ir_qubits+1+q))\n",
-    "                # ctrl_H: decomposed by H = i Rx(pi) Ry(pi/2) (if complete graph with power of 2 nodes -> relative phase i becomes global)\n",
-    "                target_qubit = num_ir_qubits + num_wk_qubits + i\n",
-    "                qml.CRY(np.pi/2, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
-    "                qml.CRX(np.pi, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
-    "                # ctrl_R: Rot(phi, theta, omega) = Rz(omega) Ry(theta) Rz(phi)\n",
-    "                qml.CRZ(phi, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
-    "                qml.CRY(theta, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
-    "                qml.CRZ(omega, wires=(num_ir_qubits + num_wk_qubits - 1, target_qubit))\n",
-    "                # toffoli inverse transformation\n",
-    "                for q in reversed(range(num_wk_qubits-1)):\n",
-    "                    qml.Toffoli(wires=(2+q, num_ir_qubits+q, num_ir_qubits+1+q))\n",
-    "                if num_ir_qubits >= 2:\n",
-    "                    qml.Toffoli(wires=(0, 1, num_ir_qubits))\n",
-    "                # control values\n",
-    "                for q in range(num_ir_qubits):\n",
-    "                    if control_values[q] == 0:\n",
-    "                        qml.PauliX(wires=q)\n",
-    "\n",
     "        # constructing QCGNN like a MPGNN\n",
     "        if \"qiskit\" in quantum_config[\"qdevice\"]:\n",
-    "            self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=qiskit_encoding, **quantum_config)\n",
+    "            ctrl_enc = lambda _input, control_values: qiskit_encoding(_input, control_values, num_ir_qubits, num_nr_qubits)\n",
     "        else:\n",
-    "            self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=pennylane_encoding, **quantum_config)\n",
+    "            ctrl_enc = lambda _input, control_values: pennylane_encoding(_input, control_values, num_ir_qubits, num_nr_qubits)\n",
+    "        self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=ctrl_enc, **quantum_config)\n",
     "        self.mlp = module_model.ClassicalMLP(in_channel=num_nr_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
     "    \n",
     "    def forward(self, x):\n",
@@ -236,6 +229,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_ckpt(ckpt_key):\n",
+    "    ckpt_dir = json_config[\"ckpt_dir\"]\n",
+    "    for f in os.listdir(ckpt_dir):\n",
+    "        if ckpt_key in f and int(f[-1]) == config[\"rnd_seed\"]:\n",
+    "            ckpt_path = os.path.join(ckpt_dir, f, \"checkpoints\")\n",
+    "            ckpt_path = os.path.join(ckpt_path, os.listdir(ckpt_path)[0])\n",
+    "            break\n",
+    "    else:\n",
+    "        raise ValueError(f\"# ModelLog: ckpt NOT found in {ckpt_dir} -> {ckpt_key}\")\n",
+    "    print(f\"# ModelLog: ckpt found at {ckpt_path}\")\n",
+    "    return ckpt_path\n",
+    "\n",
     "def execute(model, model_config, data_module, data_config, graph, mode, suffix=\"\"):\n",
     "    time_start = time.time()\n",
     "    if suffix != \"\":\n",
@@ -284,18 +289,10 @@
     "        train_summary = trainer.test(litmodel, dataloaders=data_module.train_dataloader())[0]\n",
     "        test_summary  = trainer.test(litmodel, dataloaders=data_module.test_dataloader())[0]\n",
     "    elif mode == \"predict\":\n",
-    "        ckpt_dir = json_config[\"ckpt_dir\"]\n",
     "        ckpt_key = f\"{model_config['model_name']}_{model_config['model_suffix']} | {data_config['abbrev']}_cut{data_config['cut']}\"\n",
-    "        for f in os.listdir(ckpt_dir):\n",
-    "            if model_config['model_name'] == QuantumRotQCGNN.__name__:\n",
-    "                ckpt_key = ckpt_key.replace(f\"qidx{model_config['gnn_idx_qubits']}\", \"qidx3\")\n",
-    "            if ckpt_key in f and int(f[-1]) == config[\"rnd_seed\"]:\n",
-    "                ckpt_path = os.path.join(ckpt_dir, f, \"checkpoints\")\n",
-    "                ckpt_path = os.path.join(ckpt_path, os.listdir(ckpt_path)[0])\n",
-    "                break\n",
-    "        else:\n",
-    "            raise ValueError(f\"# ModelLog: ckpt NOT found in {ckpt_dir} -> {ckpt_key}\")\n",
-    "        print(f\"# ModelLog: ckpt found at {ckpt_path}\")\n",
+    "        if model_config['model_name'] == QuantumRotQCGNN.__name__:\n",
+    "            ckpt_key = ckpt_key.replace(f\"qidx{model_config['gnn_idx_qubits']}\", \"qidx3\")\n",
+    "        ckpt_path = get_ckpt(ckpt_key)\n",
     "        train_summary = trainer.test(litmodel, dataloaders=data_module.train_dataloader(), ckpt_path=ckpt_path)[0]\n",
     "        test_summary  = trainer.test(litmodel, dataloaders=data_module.test_dataloader(), ckpt_path=ckpt_path)[0]\n",
     "\n",
@@ -384,22 +381,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_configs = [\n",
-    "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
-    "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
-    "]\n",
+    "# data_configs = [\n",
+    "#     {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "#     {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "# ]\n",
     "\n",
     "# # training\n",
     "# for data_config, rnd_seed in product(data_configs, range(10)):\n",
     "#     config[\"rnd_seed\"] = rnd_seed\n",
     "#     L.seed_everything(config[\"rnd_seed\"])\n",
     "    \n",
-    "#     # classical\n",
-    "#     for g_dim in [3,6,9]:\n",
-    "#         execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"train\")\n",
+    "#     # # classical\n",
+    "#     # for g_dim in [3,6,9]:\n",
+    "#     #     execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"train\")\n",
     "\n",
-    "#     # best classical\n",
-    "#     execute_classical(data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"train\")\n",
+    "#     # # best classical\n",
+    "#     # execute_classical(data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"train\")\n",
     "\n",
     "#     # quantum\n",
     "#     for q in [3,6,9]:\n",
@@ -419,10 +416,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_configs = [\n",
-    "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":None},\n",
-    "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":None},\n",
-    "]\n",
+    "# os.makedirs(\"./csv\", exist_ok=True)\n",
+    "\n",
+    "# data_configs = [\n",
+    "#     {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":None},\n",
+    "#     {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":None},\n",
+    "# ]\n",
     "\n",
     "# c_df, b_df, q_df = pd.DataFrame(), pd.DataFrame(), pd.DataFrame()\n",
     "# num_ptcs_range = range(2, 16+1, 2)\n",
@@ -463,22 +462,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_configs = [\n",
-    "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
-    "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
-    "]\n",
+    "# data_configs = [\n",
+    "#     {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "#     {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "# ]\n",
     "\n",
-    "q_df = pd.DataFrame()\n",
-    "for rnd_seed in range(3):\n",
-    "    for data_config in data_configs:\n",
-    "        config[\"rnd_seed\"] = rnd_seed\n",
-    "        L.seed_everything(config[\"rnd_seed\"])\n",
+    "# q_df = pd.DataFrame()\n",
+    "# for rnd_seed in range(3):\n",
+    "#     for data_config in data_configs:\n",
+    "#         config[\"rnd_seed\"] = rnd_seed\n",
+    "#         L.seed_everything(config[\"rnd_seed\"])\n",
     "\n",
-    "        # quantum\n",
-    "        q = 3\n",
-    "        _, summary = execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"predict\")\n",
-    "        q_df = pd.concat((q_df, summary))\n",
-    "        q_df.to_csv(f\"csv/{quantum_config['backend']}_{q}_gl1_gr{q}_ptc{config['num_bin_data']}-{config['num_pt_ptcs']}_{rnd_seed}.csv\", index=False)"
+    "#         # quantum\n",
+    "#         q = 3\n",
+    "#         config[\"batch_size\"] = 300\n",
+    "#         _, summary = execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"predict\")\n",
+    "#         q_df = pd.concat((q_df, summary))\n",
+    "#         q_df.to_csv(f\"csv/{quantum_config['qbackend']}_{q}_gl1_gr{q}_ptc{config['num_bin_data']}-{config['num_pt_ptcs']}_{rnd_seed}.csv\", index=False)"
    ]
   }
  ],
