--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -19,6 +19,7 @@
     "config = g_main.json_config[\"config\"]\n",
     "config[\"batch_size\"]   = 300\n",
     "config[\"rnd_seed\"]     = 0\n",
+    "config[\"num_pt_ptcs\"]  = 2\n",
     "config[\"num_bin_data\"] = 25 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
     "L.seed_everything(config[\"rnd_seed\"])\n",
     "\n",
@@ -38,7 +39,7 @@
     "        x = torch.unflatten(x, dim=-1, sizes=(2**self.num_ir_qubits, self.num_nr_qubits))\n",
     "        x = x.mT\n",
     "        meas = x.detach()\n",
-    "        x = torch.sum(x, dim=-1) * (2**self.num_ir_qubits)\n",
+    "        x = torch.sum(x, dim=-1) * self.scale\n",
     "        return x, meas\n",
     "\n",
     "class QuantumRotQCGNN(nn.Module):\n",
@@ -56,7 +57,7 @@
     "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
     "        x, meas = self.phi(x)\n",
     "        x = self.mlp(x)\n",
-    "        return x, meas"
+    "        return x.detach(), meas"
    ]
   },
   {
@@ -65,10 +66,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "qidx = int(np.ceil(np.log2(config[\"num_pt_ptcs\"])))\n",
     "qnn, gl, gr  = 3, 1, 3\n",
     "data_configs = [\n",
-    "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
-    "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8},\n",
+    "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":config[\"num_pt_ptcs\"]},\n",
+    "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":config[\"num_pt_ptcs\"]},\n",
     "]\n",
     "\n",
     "def load_state_dict(model, ckpt_path):\n",
@@ -86,7 +88,7 @@
     "    model_suffix = f\"qidx3_qnn{qnn}_gl{gl}_gr{gr}\"\n",
     "    ckpt_key  = f\"{model_name}_{model_suffix} | {data_config['abbrev']}_cut{data_config['cut']}\"\n",
     "    ckpt_path = g_main.get_ckpt(ckpt_key)\n",
-    "    model     = QuantumRotQCGNN(3, qnn, gl, gr, quantum_config)\n",
+    "    model     = QuantumRotQCGNN(qidx, qnn, gl, gr, quantum_config)\n",
     "    load_state_dict(model, ckpt_path)\n",
     "    model.eval()\n",
     "    return model(x)\n",
@@ -99,11 +101,12 @@
     "    for x, y_true in data_module.test_dataloader():\n",
     "        y_penl_pred, meas_penl = prediction(x, {\"qdevice\": \"default.qubit\", \"diff_method\": \"best\", \"qbackend\": \"\"})\n",
     "        y_ibmq_pred, meas_ibmq = prediction(x, {\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": ibmq_backend})\n",
-    "        y_qasm_pred, qasm_ibmq = prediction(x, {\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": \"ibmq_qasm_simulator\"})\n",
-    "    channel_result = {\"x\":x, \"y_true\":y_true, \"y_penl_pred\":y_penl_pred, \"meas_penl\":meas_penl, \"y_qasm_pred\":y_qasm_pred, \"qasm_ibmq\":qasm_ibmq, \"y_ibmq_pred\":y_ibmq_pred, \"meas_ibmq\":meas_ibmq}\n",
+    "        y_qasm_pred, meas_qasm = prediction(x, {\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": \"ibmq_qasm_simulator\"})\n",
+    "    # channel_result = {\"x\":x, \"y_true\":y_true, \"y_penl_pred\":y_penl_pred, \"meas_penl\":meas_penl}\n",
+    "    channel_result = {\"x\":x, \"y_true\":y_true, \"y_penl_pred\":y_penl_pred, \"meas_penl\":meas_penl, \"y_qasm_pred\":y_qasm_pred, \"meas_qasm\":meas_qasm, \"y_ibmq_pred\":y_ibmq_pred, \"meas_ibmq\":meas_ibmq}\n",
     "    result[data_config[\"abbrev\"]] = channel_result\n",
     "\n",
-    "npy_file = os.path.join(ibmq_dir, f\"ibmq_{ibmq_backend}_{config['rnd_seed']}-{config['num_bin_data']}_{config['batch_size']}-{qnn}_{gl}_{gr}.npy\")\n",
+    "npy_file = os.path.join(ibmq_dir, f\"{ibmq_backend}_r{config['rnd_seed']}-p_{config['num_pt_ptcs']}_n{config['num_bin_data']}_b{config['batch_size']}-{qnn}_{gl}_{gr}.npy\")\n",
     "np.save(npy_file, result, allow_pickle=True)"
    ]
   }
